main/default/objects/Order_Property__c/Order_Property__c.object-meta.xml
<CustomObject>
    <label>Order Property</label>
    <nameField>
        <label>Order Property Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Properties</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>