main/default/objects/Order_Property__c/fields/ICC_Order_MRR__c.field-meta.xml
<CustomField>
    <fullName>ICC_Order_MRR__c</fullName>
    <label>ICC Order MRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>