main/default/objects/Order_Property__c/fields/Order_Actions__c.field-meta.xml
<CustomField>
    <fullName>Order_Actions__c</fullName>
    <description>These are actionable Items to choose if needed.</description>
    <label>Order Actions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Change Address</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>