main/default/objects/Order_Property__c/fields/Order_Property_Group__c.field-meta.xml
<CustomField>
    <fullName>Order_Property_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Property Group</label>
    <referenceTo>Order_Property__c</referenceTo>
    <relationshipLabel>Related Order Properties</relationshipLabel>
    <relationshipName>Related_Order_Properties</relationshipName>
    <type>Lookup</type>
</CustomField>