main/default/objects/Order_Property__c/fields/Service_Location__c.field-meta.xml
<CustomField>
    <fullName>Service_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Location</label>
    <referenceTo>Service_Location__c</referenceTo>
    <relationshipLabel>Order Properties</relationshipLabel>
    <relationshipName>Order_Properties</relationshipName>
    <type>Lookup</type>
</CustomField>