main/default/objects/Order_Property__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Install</fullName>
            </value>
            <value>
                <fullName>Disconnect</fullName>
            </value>
            <value>
                <fullName>iCert</fullName>
            </value>
            <value>
                <fullName>Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>