main/default/objects/Order_Property__c/recordTypes/Order_Property_Group.recordType-meta.xml
<RecordType>
    <fullName>Order_Property_Group</fullName>
    <active>true</active>
    <label>Order Property Group</label>
</RecordType>