main/default/objects/Order_Property__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Order__c</columns>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>External_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>notContain</operation>
        <value>install,change,disco,move</value>
    </filters>
    <label>All</label>
</ListView>